Connect script to index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body class="bod">
-
+    <script src="javascript.js"></script>
     </body>
 </html>
