--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
         <title>Etch-a-Sketch</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body class="bod">
+    <body>
+        <div class="bod">
+            <h1>Etch-a-Sketch</h1>
+        </div>
     <script src="javascript.js"></script>
     </body>
 </html>
